--- a/discussions/01/Discussion 01.ipynb
+++ b/discussions/01/Discussion 01.ipynb
@@ -41,6 +41,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. DGP fits into questions and hypotheses & Finding and cleaning data\n",
+    "2. True (probability) model fits into data modeling\n",
+    "3. Observations fit into finding and cleaning data & data modeling\n",
+    "4. Statistical model fits into predictions and inference & decisions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -60,11 +70,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. The actual election process\n",
+    "2. Previous elections, survey individual, etc. \n",
+    "3. Election votes of individuals\n",
+    "4. Comparison between several candidates\n",
+    "5. Compare with real data to test the accuracy of your prediction"
+   ]
   },
   {
    "cell_type": "code",
@@ -85,11 +99,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. The actual disparity between men and women among city of SD employees"
+   ]
   },
   {
    "cell_type": "code",
@@ -207,9 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# What is this? (discuss imports)\n",
     "%load_ext autoreload\n",
@@ -218,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,20 +295,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16.87, 17.41, 10.18, ..., 16.09, 15.28, 29.72])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fp = os.path.join('data', 'restaurant.csv')\n",
-    "arr = disc.data2array(fp)"
+    "arr = disc.data2array(fp)\n",
+    "arr"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -303,10 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(arr)"
+   ]
   },
   {
    "cell_type": "code",
@@ -324,10 +365,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "269359.5096"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tips = arr * 0.18\n",
+    "total_tips = np.sum(tips)\n",
+    "total_tips"
+   ]
   },
   {
    "cell_type": "code",
@@ -345,10 +401,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14.964417200000002, 13.09, 3.0, 77.91]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average = np.mean(arr)\n",
+    "median = np.median(arr)\n",
+    "minimum = np.min(arr)\n",
+    "maximum = np.max(arr)\n",
+    "result = [average, median, minimum, maximum]\n",
+    "result"
+   ]
   },
   {
    "cell_type": "code",
@@ -366,10 +440,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42347"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = np.sum(arr > 15)\n",
+    "count"
+   ]
   },
   {
    "cell_type": "code",
@@ -387,10 +475,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1496441.7200000002, 0.028440733395217018)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total = np.sum(arr)\n",
+    "five_smaller = arr[np.where(arr<5)]\n",
+    "five_total = np.sum(five_smaller)\n",
+    "prop = five_total / total\n",
+    "total, prop"
+   ]
   },
   {
    "cell_type": "code",
@@ -408,10 +513,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test 1 using example\n",
+    "ex1 = np.array([2.2, 2.6, 3.3, 1.3])\n",
+    "\n",
+    "# Bad double loop\n",
+    "# [1 if np.sum([True if i != j and np.abs(ex1[i] - ex1[j]) < 0.5 else False for i in range(len(ex1))]) >= 1 else 0 for j in range(len(ex1))]\n",
+    "\n",
+    "np.sum([np.sum(np.abs(ex1 - elem) < 0.5) > 1 for elem in ex1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test 2 using example\n",
+    "ex2 = np.array([2.25, 4.49, 3.15, 2.38, 2.22, 3.15])\n",
+    "np.sum([np.sum(np.abs(ex2 - elem) < 0.05) > 1 for elem in ex2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99963"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q7 Answer\n",
+    "np.sum([np.sum(np.abs(arr - elem) < 0.05) > 1 for elem in arr])"
+   ]
   },
   {
    "cell_type": "code",
@@ -433,24 +600,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09945"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_int = np.round(arr * 100).astype(int)\n",
+    "arr_mod = arr_int % 10\n",
+    "end_in_9 = (arr_mod == 9).sum() / len(arr_int)\n",
+    "end_in_9"
+   ]
   },
   {
    "cell_type": "code",
@@ -476,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
