--- a/projects/project02/project02.ipynb
+++ b/projects/project02/project02.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-14T01:51:26.042046Z",
@@ -168,8 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 44.8 s, sys: 1.38 s, total: 46.1 s\n",
-      "Wall time: 46.2 s\n"
+      "Wall time: 1min 40s\n"
      ]
     }
    ],
@@ -717,8 +716,8 @@
     "# dict(zip(flights.columns, data_tp))\n",
     "{'YEAR': 'Q',\n",
     " 'MONTH': 'O', # Month can be ordinal and quantitative\n",
-    " 'DAY': 'Q', \n",
-    " 'DAY_OF_WEEK': 'Q', # DayOfWeek can be ordinal and quantitative\n",
+    " 'DAY': 'O', \n",
+    " 'DAY_OF_WEEK': 'O', # DayOfWeek can be ordinal and quantitative\n",
     " 'AIRLINE': 'N',\n",
     " 'FLIGHT_NUMBER': 'N', # This might be wrong\n",
     " 'TAIL_NUMBER': 'N',\n",
@@ -2308,7 +2307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
