--- a/labs/lab04/lab04.ipynb
+++ b/labs/lab04/lab04.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Login Id</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>466</td>\n",
+       "      <td>2017-01-07 18:24:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>466</td>\n",
+       "      <td>2017-01-07 18:24:55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>458</td>\n",
+       "      <td>2017-01-07 18:25:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>458</td>\n",
+       "      <td>2017-01-07 18:26:21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>592</td>\n",
+       "      <td>2017-01-07 19:09:59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Login Id                 Time\n",
+       "0       466  2017-01-07 18:24:07\n",
+       "1       466  2017-01-07 18:24:55\n",
+       "2       458  2017-01-07 18:25:18\n",
+       "3       458  2017-01-07 18:26:21\n",
+       "4       592  2017-01-07 19:09:59"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fp = os.path.join('data', 'login_table.csv')\n",
-    "login = pd.read_csv(fp)"
+    "login = pd.read_csv(fp)\n",
+    "login.head()"
    ]
   },
   {
@@ -116,10 +186,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Login Id</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1257</th>\n",
+       "      <td>817</td>\n",
+       "      <td>2017-07-04 14:58:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1314</th>\n",
+       "      <td>817</td>\n",
+       "      <td>2017-07-09 12:16:23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Login Id                 Time\n",
+       "1257       817  2017-07-04 14:58:14\n",
+       "1314       817  2017-07-09 12:16:23"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "login[login['Login Id'] == 817]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_of_day</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Login Id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>817</th>\n",
+       "      <td>12:16:23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         time_of_day\n",
+       "Login Id            \n",
+       "817         12:16:23"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "login_latest = login.copy()\n",
+    "login_latest['Time'] = login_latest['Time'].apply(pd.to_datetime)\n",
+    "login_latest = login_latest.assign(time_of_day=login_latest['Time'].dt.time)#['time_of_day']#.apply(pd.to_datetime)\n",
+    "time_of_day = login_latest.groupby('Login Id', as_index=True)[['time_of_day']].last() # Answer\n",
+    "time_of_day.sample()"
+   ]
   },
   {
    "cell_type": "code",
@@ -138,6 +322,40 @@
     "\n",
     "Write a function `smallest_ellapsed` which takes in a dataframe like `login` and outputs a dataframe, indexed by Login ID, containing the shortest time elapsed for each user. Any users who haven't logged in more than once should not be included in the output."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Time   19 days 22:22:53\n",
+       "Name: 1233, dtype: timedelta64[ns]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts = login['Login Id'].value_counts() # Counts occurrence\n",
+    "indices = counts[counts > 1].index # Login Id of more than once\n",
+    "\n",
+    "login_more = login[[id in indices for id in login['Login Id']]].copy() # Deep copy, more than once\n",
+    "login_more['Time'] = login_more['Time'].apply(pd.to_datetime)\n",
+    "elapsed = login_more.groupby('Login Id').aggregate({'Time':(lambda x: np.min(np.diff(list(x))))}) # Answer\n",
+    "elapsed.loc[1233]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -189,14 +407,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Smith</td>\n",
+       "      <td>book</td>\n",
+       "      <td>01.01.2012</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jones</td>\n",
+       "      <td>pen</td>\n",
+       "      <td>02.20.2013</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Trump</td>\n",
+       "      <td>hotel</td>\n",
+       "      <td>03.03.2015</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Smith</td>\n",
+       "      <td>book</td>\n",
+       "      <td>05.10.2013</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jones</td>\n",
+       "      <td>book</td>\n",
+       "      <td>02.20.2013</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Trump</td>\n",
+       "      <td>boat</td>\n",
+       "      <td>03.30.2017</td>\n",
+       "      <td>700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Smith</td>\n",
+       "      <td>ruler</td>\n",
+       "      <td>07.05.2014</td>\n",
+       "      <td>2100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Jones</td>\n",
+       "      <td>ruler</td>\n",
+       "      <td>02.25.2015</td>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Trump</td>\n",
+       "      <td>book</td>\n",
+       "      <td>03.03.2015</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Smith</td>\n",
+       "      <td>pen</td>\n",
+       "      <td>01.01.2012</td>\n",
+       "      <td>2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Jones</td>\n",
+       "      <td>ruler</td>\n",
+       "      <td>02.20.2013</td>\n",
+       "      <td>3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Trump</td>\n",
+       "      <td>pen</td>\n",
+       "      <td>03.03.2015</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name Product        Date  Total\n",
+       "0   Smith    book  01.01.2012    200\n",
+       "1   Jones     pen  02.20.2013    300\n",
+       "2   Trump   hotel  03.03.2015    100\n",
+       "3   Smith    book  05.10.2013   2000\n",
+       "4   Jones    book  02.20.2013     30\n",
+       "5   Trump    boat  03.30.2017    700\n",
+       "6   Smith   ruler  07.05.2014   2100\n",
+       "7   Jones   ruler  02.25.2015    350\n",
+       "8   Trump    book  03.03.2015   1000\n",
+       "9   Smith     pen  01.01.2012   2500\n",
+       "10  Jones   ruler  02.20.2013   3000\n",
+       "11  Trump     pen  03.03.2015    150"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sales_fp = os.path.join('data', 'sales.csv')\n",
     "sales = pd.read_csv(sales_fp)\n",
     "sales"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# total_seller\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -526,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
