--- a/labs/lab04/lab04.ipynb
+++ b/labs/lab04/lab04.ipynb
@@ -559,7 +559,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# total_seller\n"
+    "# total_seller\n",
+    "total_seller = sales.groupby('Name').sum()[['Total']]\n",
+    "total_seller"
    ]
   },
   {
@@ -567,21 +569,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# product_name\n",
+    "product_name = sales.pivot_table(\n",
+    "        values='Total', \n",
+    "        index='Product',\n",
+    "        columns='Name',\n",
+    "        aggfunc='sum'\n",
+    "    )\n",
+    "product_name"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# count_product\n",
+    "count_product = sales.pivot_table(\n",
+    "        values='Total', \n",
+    "        index='Name',\n",
+    "        columns='Date',\n",
+    "        aggfunc='sum'\n",
+    "    )\n",
+    "count_product\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# total_by_month\n",
+    "total_seller = sales.pivot_table(\n",
+    "        values='Total', \n",
+    "        index='Name',\n",
+    "        columns='Date',\n",
+    "        aggfunc='sum'\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "code",
