--- a/labs/lab04/lab04.ipynb
+++ b/labs/lab04/lab04.ipynb
@@ -52,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +169,7 @@
        "4       592  2017-01-07 19:09:59"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +244,7 @@
        "1314       817  2017-07-09 12:16:23"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +288,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>852</th>\n",
-       "      <td>12:26:18</td>\n",
+       "      <th>882</th>\n",
+       "      <td>18:21:05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -289,10 +298,10 @@
       "text/plain": [
        "         time_of_day\n",
        "Login Id            \n",
-       "852         12:26:18"
+       "882         18:21:05"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +344,7 @@
        "Name: 1233, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +551,7 @@
        "11  Trump     pen  03.03.2015    150"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,9 +564,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Jones</th>\n",
+       "      <td>3680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Smith</th>\n",
+       "      <td>6800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trump</th>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Total\n",
+       "Name        \n",
+       "Jones   3680\n",
+       "Smith   6800\n",
+       "Trump   1950"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# total_seller\n",
     "total_seller = sales.groupby('Name').sum()[['Total']]\n",
@@ -566,9 +633,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Name</th>\n",
+       "      <th>Jones</th>\n",
+       "      <th>Smith</th>\n",
+       "      <th>Trump</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Product</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>boat</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>book</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2200.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hotel</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pen</th>\n",
+       "      <td>300.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ruler</th>\n",
+       "      <td>3350.0</td>\n",
+       "      <td>2100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Name      Jones   Smith   Trump\n",
+       "Product                        \n",
+       "boat        NaN     NaN   700.0\n",
+       "book       30.0  2200.0  1000.0\n",
+       "hotel       NaN     NaN   100.0\n",
+       "pen       300.0  2500.0   150.0\n",
+       "ruler    3350.0  2100.0     NaN"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# product_name\n",
     "product_name = sales.pivot_table(\n",
@@ -582,9 +731,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Date</th>\n",
+       "      <th>01.01.2012</th>\n",
+       "      <th>02.20.2013</th>\n",
+       "      <th>02.25.2015</th>\n",
+       "      <th>03.03.2015</th>\n",
+       "      <th>03.30.2017</th>\n",
+       "      <th>05.10.2013</th>\n",
+       "      <th>07.05.2014</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Jones</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3330.0</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Smith</th>\n",
+       "      <td>2700.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trump</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1250.0</td>\n",
+       "      <td>700.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Date   01.01.2012  02.20.2013  02.25.2015  03.03.2015  03.30.2017  05.10.2013  \\\n",
+       "Name                                                                            \n",
+       "Jones         NaN      3330.0       350.0         NaN         NaN         NaN   \n",
+       "Smith      2700.0         NaN         NaN         NaN         NaN      2000.0   \n",
+       "Trump         NaN         NaN         NaN      1250.0       700.0         NaN   \n",
+       "\n",
+       "Date   07.05.2014  \n",
+       "Name               \n",
+       "Jones         NaN  \n",
+       "Smith      2100.0  \n",
+       "Trump         NaN  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# count_product\n",
     "count_product = sales.pivot_table(\n",
@@ -598,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
