--- a/labs/lab04/lab04.ipynb
+++ b/labs/lab04/lab04.ipynb
@@ -52,18 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -71,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +160,7 @@
        "4       592  2017-01-07 19:09:59"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,11 +186,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-=======
    "execution_count": 218,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
@@ -248,11 +235,7 @@
        "1314       817  2017-07-09 12:16:23"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 12,
-=======
      "execution_count": 218,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,65 +246,16 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 13,
-=======
    "execution_count": 253,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
      "data": {
-<<<<<<< HEAD
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time_of_day</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Login Id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>882</th>\n",
-       "      <td>18:21:05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         time_of_day\n",
-       "Login Id            \n",
-       "882         18:21:05"
-      ]
-     },
-     "execution_count": 13,
-=======
       "text/plain": [
        "20"
       ]
      },
      "execution_count": 253,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +304,7 @@
        "Name: 1233, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,11 +376,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 15,
-=======
    "execution_count": 159,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
@@ -581,11 +511,7 @@
        "11  Trump     pen  03.03.2015    150"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 15,
-=======
      "execution_count": 159,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,11 +524,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 16,
-=======
    "execution_count": 160,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
@@ -658,11 +580,7 @@
        "Trump   1950"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 16,
-=======
      "execution_count": 160,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,11 +593,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 17,
-=======
    "execution_count": 185,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
@@ -695,29 +609,21 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-<<<<<<< HEAD
-       "    .dataframe thead th {\n",
-=======
        "    .dataframe thead tr th {\n",
        "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe thead tr:last-of-type th {\n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-<<<<<<< HEAD
-       "    <tr style=\"text-align: right;\">\n",
-=======
        "    <tr>\n",
        "      <th></th>\n",
        "      <th colspan=\"3\" halign=\"left\">Total</th>\n",
        "    </tr>\n",
        "    <tr>\n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "      <th>Name</th>\n",
        "      <th>Jones</th>\n",
        "      <th>Smith</th>\n",
@@ -766,10 +672,7 @@
        "</div>"
       ],
       "text/plain": [
-<<<<<<< HEAD
-=======
        "          Total                \n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "Name      Jones   Smith   Trump\n",
        "Product                        \n",
        "boat        NaN     NaN   700.0\n",
@@ -779,11 +682,7 @@
        "ruler    3350.0  2100.0     NaN"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 17,
-=======
      "execution_count": 185,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,11 +701,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-=======
    "execution_count": 186,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
@@ -822,23 +717,16 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-<<<<<<< HEAD
-       "    .dataframe thead th {\n",
-=======
        "    .dataframe thead tr th {\n",
        "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe thead tr:last-of-type th {\n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-<<<<<<< HEAD
-       "    <tr style=\"text-align: right;\">\n",
-=======
        "    <tr>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -846,7 +734,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "      <th>Date</th>\n",
        "      <th>01.01.2012</th>\n",
        "      <th>02.20.2013</th>\n",
@@ -857,10 +744,7 @@
        "      <th>07.05.2014</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-<<<<<<< HEAD
-=======
        "      <th>Product</th>\n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "      <th>Name</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -873,36 +757,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-<<<<<<< HEAD
-       "      <th>Jones</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3330.0</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Smith</th>\n",
-       "      <td>2700.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Trump</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1250.0</td>\n",
-       "      <td>700.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-=======
        "      <th>boat</th>\n",
        "      <th>Trump</th>\n",
        "      <td>0</td>\n",
@@ -1006,29 +860,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2100</td>\n",
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-<<<<<<< HEAD
-       "Date   01.01.2012  02.20.2013  02.25.2015  03.03.2015  03.30.2017  05.10.2013  \\\n",
-       "Name                                                                            \n",
-       "Jones         NaN      3330.0       350.0         NaN         NaN         NaN   \n",
-       "Smith      2700.0         NaN         NaN         NaN         NaN      2000.0   \n",
-       "Trump         NaN         NaN         NaN      1250.0       700.0         NaN   \n",
-       "\n",
-       "Date   07.05.2014  \n",
-       "Name               \n",
-       "Jones         NaN  \n",
-       "Smith      2100.0  \n",
-       "Trump         NaN  "
-      ]
-     },
-     "execution_count": 18,
-=======
        "                   Total                                              \\\n",
        "Date          01.01.2012 02.20.2013 02.25.2015 03.03.2015 03.30.2017   \n",
        "Product Name                                                           \n",
@@ -1059,7 +896,6 @@
       ]
      },
      "execution_count": 186,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,11 +914,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-=======
    "execution_count": 187,
->>>>>>> aed2fbaae8605ba169fa9b05cd20872d384ac971
    "metadata": {},
    "outputs": [
     {
@@ -1728,17 +1560,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Total Variation Distance (TVD)\n",
+    "def total_variation_distance(dist1, dist2):\n",
+    "    '''Given two empirical distributions, \n",
+    "    both sorted with same categories, calculates the TVD'''\n",
+    "    return np.sum(np.abs(dist1 - dist2)) / 2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# same_color_distribution\n",
+    "def same_color_distribution():\n",
+    "    \"\"\"\n",
+    "    same_color_distribution outputs a hard-coded tuple \n",
+    "    with the p-value and whether you 'Fail to Reject' or 'Reject' \n",
+    "    the null hypothesis.\n",
+    "\n",
+    "    >>> out = same_color_distribution()\n",
+    "    >>> isinstance(out[0], float)\n",
+    "    True\n",
+    "    >>> out[1] in ['Fail to Reject', 'Reject']\n",
+    "    True\n",
+    "    \"\"\""
+   ]
   },
   {
    "cell_type": "code",
