--- a/labs/lab03/lab03.ipynb
+++ b/labs/lab03/lab03.ipynb
@@ -151,7 +151,7 @@
    ],
    "source": [
     "# Null Hypothesis # ASK!!!!!!!!!!!!!!!!!!!!!\n",
-    "[3, 6, 7]"
+    "[3, 6, 7] # [3, 6]"
    ]
   },
   {
@@ -172,7 +172,7 @@
    ],
    "source": [
     "# Alternative Hypothesis # ASK!!!!!!!!!!!!!!!!!!!!!\n",
-    "[1, 4, 8] # We can test both tail right?"
+    "[1, 4, 8] # We can test both tail right? # [2, 5]"
    ]
   },
   {
@@ -259,7 +259,7 @@
    ],
    "source": [
     "# p-val # ASK!!!!!!!!!!!!!!!!!!!!! What's wrong just looking at the prop in observaton\n",
-    "5"
+    "5 # Correct is 3"
    ]
   },
   {
@@ -1648,7 +1648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
