--- a/lectures/08/Lecture 08 Missingness.ipynb
+++ b/lectures/08/Lecture 08 Missingness.ipynb
@@ -208,13 +208,13 @@
     "\n",
     "For each of the following datasets, decide whether they are MD, MCAR, MAR, NMAR:\n",
     "\n",
-    "* Self-reported income in the *follow-up* questionnaire of the census.\n",
-    "* A table (for a medical study) with column `gender` and column `age`. Age has missing values.\n",
-    "* Measurements from the Hubble Space Telescope (dropped data during transmission).\n",
-    "* The serial number of returned Macbook Pros, in a table of order information. \n",
-    "* SAT scores reported by an institution for College Ranking scores.\n",
-    "* A table with a single column: self-reported education (with missing values).\n",
-    "* Midterm report with three columns (`ver.1`, `ver.2`, `ver.3`). ⅔ of the entries in the report are `NaN`.\n",
+    "* Self-reported income in the *follow-up* questionnaire of the census. [MCAR]\n",
+    "* A table (for a medical study) with column `gender` and column `age`. Age has missing values. [MAR, female may tend not to report age]\n",
+    "* Measurements from the Hubble Space Telescope (dropped data during transmission).  [MCAR]\n",
+    "* The serial number of returned Macbook Pros, in a table of order information. [MCAR, serial number it self has nothing to do with missingness]\n",
+    "* SAT scores reported by an institution for College Ranking scores. [NMAR, institution wants to report higher scores to increase ranking]\n",
+    "* A table with a single column: self-reported education (with missing values). [NMAR, unwilling to report (need to collect more data from other category, such as age, family background etc., to make it more MAR)]\n",
+    "* Midterm report with three columns (`ver.1`, `ver.2`, `ver.3`). ⅔ of the entries in the report are `NaN`. [MD]\n",
     "\n"
    ]
   },
@@ -2193,7 +2193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   },
   "livereveal": {
    "scroll": true,
