--- a/projects/project01/project01.ipynb
+++ b/projects/project01/project01.ipynb
@@ -2860,7 +2860,7 @@
     "        \n",
     "    return differences\n",
     "\n",
-    "boot = bootstrap(total, 10000)"
+    "boot = bootstrap(total, 10000) # 60"
    ]
   },
   {
@@ -2880,7 +2880,7 @@
     }
    ],
    "source": [
-    "np.percentile(boot, [2.5, 97.5])"
+    "np.percentile(boot, [2.5, 97.5]) # [57-60-ish]"
    ]
   },
   {
@@ -4038,7 +4038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
