lab06, project03 update

--- a/projects/project03/outages.ipynb
+++ b/projects/project03/outages.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-31T23:36:28.652554Z",
@@ -90,6 +90,399 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBS</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>U.S._STATE</th>\n",
+       "      <th>POSTAL.CODE</th>\n",
+       "      <th>CLIMATE.REGION</th>\n",
+       "      <th>ANOMALY.LEVEL</th>\n",
+       "      <th>CLIMATE.CATEGORY</th>\n",
+       "      <th>OUTAGE.START.DATE</th>\n",
+       "      <th>OUTAGE.START.TIME</th>\n",
+       "      <th>OUTAGE.RESTORATION.DATE</th>\n",
+       "      <th>OUTAGE.RESTORATION.TIME</th>\n",
+       "      <th>CAUSE.CATEGORY</th>\n",
+       "      <th>CAUSE.CATEGORY.DETAIL</th>\n",
+       "      <th>OUTAGE.DURATION</th>\n",
+       "      <th>DEMAND.LOSS.MW</th>\n",
+       "      <th>CUSTOMERS.AFFECTED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2011-07-01</td>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>2011-07-03</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3060.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2014-05-11</td>\n",
+       "      <td>18:38:00</td>\n",
+       "      <td>2014-05-11</td>\n",
+       "      <td>18:39:00</td>\n",
+       "      <td>intentional attack</td>\n",
+       "      <td>vandalism</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>2010-10-26</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>2010-10-28</td>\n",
+       "      <td>22:00:00</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>heavy wind</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2012-06-19</td>\n",
+       "      <td>04:30:00</td>\n",
+       "      <td>2012-06-20</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>thunderstorm</td>\n",
+       "      <td>2550.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>warm</td>\n",
+       "      <td>2015-07-18</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>2015-07-19</td>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1740.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OBS  YEAR  MONTH U.S._STATE POSTAL.CODE      CLIMATE.REGION  ANOMALY.LEVEL  \\\n",
+       "0    1  2011    7.0  Minnesota          MN  East North Central           -0.3   \n",
+       "1    2  2014    5.0  Minnesota          MN  East North Central           -0.1   \n",
+       "2    3  2010   10.0  Minnesota          MN  East North Central           -1.5   \n",
+       "3    4  2012    6.0  Minnesota          MN  East North Central           -0.1   \n",
+       "4    5  2015    7.0  Minnesota          MN  East North Central            1.2   \n",
+       "\n",
+       "  CLIMATE.CATEGORY OUTAGE.START.DATE OUTAGE.START.TIME  \\\n",
+       "0           normal        2011-07-01          17:00:00   \n",
+       "1           normal        2014-05-11          18:38:00   \n",
+       "2             cold        2010-10-26          20:00:00   \n",
+       "3           normal        2012-06-19          04:30:00   \n",
+       "4             warm        2015-07-18          02:00:00   \n",
+       "\n",
+       "  OUTAGE.RESTORATION.DATE OUTAGE.RESTORATION.TIME      CAUSE.CATEGORY  \\\n",
+       "0              2011-07-03                20:00:00      severe weather   \n",
+       "1              2014-05-11                18:39:00  intentional attack   \n",
+       "2              2010-10-28                22:00:00      severe weather   \n",
+       "3              2012-06-20                23:00:00      severe weather   \n",
+       "4              2015-07-19                07:00:00      severe weather   \n",
+       "\n",
+       "  CAUSE.CATEGORY.DETAIL  OUTAGE.DURATION  DEMAND.LOSS.MW  CUSTOMERS.AFFECTED  \n",
+       "0                   NaN           3060.0             NaN             70000.0  \n",
+       "1             vandalism              1.0             NaN                 NaN  \n",
+       "2            heavy wind           3000.0             NaN             70000.0  \n",
+       "3          thunderstorm           2550.0             NaN             68200.0  \n",
+       "4                   NaN           1740.0           250.0            250000.0  "
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "cols = (['OBS', 'YEAR', 'MONTH', 'U.S._STATE', 'POSTAL.CODE', 'CLIMATE.REGION', 'ANOMALY.LEVEL', 'CLIMATE.CATEGORY',\n",
+    "         'OUTAGE.START.DATE', 'OUTAGE.START.TIME', 'OUTAGE.RESTORATION.DATE', 'OUTAGE.RESTORATION.TIME',\n",
+    "         'CAUSE.CATEGORY', 'CAUSE.CATEGORY.DETAIL', 'OUTAGE.DURATION', 'DEMAND.LOSS.MW', 'CUSTOMERS.AFFECTED']) # NERC.REGION, HURRICANE.NAMES\n",
+    "fp = os.path.join('data', 'outage.xlsx')\n",
+    "df = pd.read_excel(fp, header=0, skiprows=[0, 1, 2, 3, 4, 6])[cols] # Load dataframe for my use, skip unuseful rows\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBS</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>U.S._STATE</th>\n",
+       "      <th>POSTAL.CODE</th>\n",
+       "      <th>CLIMATE.REGION</th>\n",
+       "      <th>ANOMALY.LEVEL</th>\n",
+       "      <th>CLIMATE.CATEGORY</th>\n",
+       "      <th>CAUSE.CATEGORY</th>\n",
+       "      <th>CAUSE.CATEGORY.DETAIL</th>\n",
+       "      <th>OUTAGE.DURATION</th>\n",
+       "      <th>DEMAND.LOSS.MW</th>\n",
+       "      <th>CUSTOMERS.AFFECTED</th>\n",
+       "      <th>OUTAGE.START</th>\n",
+       "      <th>OUTAGE.RESTORATION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3060.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>2011-07-01 17:00:00</td>\n",
+       "      <td>2011-07-03 20:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>intentional attack</td>\n",
+       "      <td>vandalism</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-05-11 18:38:00</td>\n",
+       "      <td>2014-05-11 18:39:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>heavy wind</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>2010-10-26 20:00:00</td>\n",
+       "      <td>2010-10-28 22:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>thunderstorm</td>\n",
+       "      <td>2550.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68200.0</td>\n",
+       "      <td>2012-06-19 04:30:00</td>\n",
+       "      <td>2012-06-20 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>warm</td>\n",
+       "      <td>severe weather</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1740.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "      <td>2015-07-18 02:00:00</td>\n",
+       "      <td>2015-07-19 07:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OBS  YEAR  MONTH U.S._STATE POSTAL.CODE      CLIMATE.REGION  ANOMALY.LEVEL  \\\n",
+       "0    1  2011    7.0  Minnesota          MN  East North Central           -0.3   \n",
+       "1    2  2014    5.0  Minnesota          MN  East North Central           -0.1   \n",
+       "2    3  2010   10.0  Minnesota          MN  East North Central           -1.5   \n",
+       "3    4  2012    6.0  Minnesota          MN  East North Central           -0.1   \n",
+       "4    5  2015    7.0  Minnesota          MN  East North Central            1.2   \n",
+       "\n",
+       "  CLIMATE.CATEGORY      CAUSE.CATEGORY CAUSE.CATEGORY.DETAIL  OUTAGE.DURATION  \\\n",
+       "0           normal      severe weather                   NaN           3060.0   \n",
+       "1           normal  intentional attack             vandalism              1.0   \n",
+       "2             cold      severe weather            heavy wind           3000.0   \n",
+       "3           normal      severe weather          thunderstorm           2550.0   \n",
+       "4             warm      severe weather                   NaN           1740.0   \n",
+       "\n",
+       "   DEMAND.LOSS.MW  CUSTOMERS.AFFECTED        OUTAGE.START  OUTAGE.RESTORATION  \n",
+       "0             NaN             70000.0 2011-07-01 17:00:00 2011-07-03 20:00:00  \n",
+       "1             NaN                 NaN 2014-05-11 18:38:00 2014-05-11 18:39:00  \n",
+       "2             NaN             70000.0 2010-10-26 20:00:00 2010-10-28 22:00:00  \n",
+       "3             NaN             68200.0 2012-06-19 04:30:00 2012-06-20 23:00:00  \n",
+       "4           250.0            250000.0 2015-07-18 02:00:00 2015-07-19 07:00:00  "
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine date and time into datetime\n",
+    "df['OUTAGE.START'] = (df['OUTAGE.START.DATE'] + \n",
+    "                      pd.to_timedelta(df['OUTAGE.START.TIME'].astype(str))) # Combine START into date\n",
+    "df['OUTAGE.RESTORATION'] = (df['OUTAGE.RESTORATION.DATE'] +\n",
+    "                            pd.to_timedelta(df['OUTAGE.RESTORATION.TIME'].astype(str))) # Combine RESTORATION into date\n",
+    "outage = df.drop(columns=['OUTAGE.START.DATE', 'OUTAGE.START.TIME',\n",
+    "                          'OUTAGE.RESTORATION.DATE', 'OUTAGE.RESTORATION.TIME']) # Drop columns\n",
+    "outage.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
@@ -98,9 +491,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "# TODO"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
