lab06 project03 update

--- a/labs/lab06/lab06.ipynb
+++ b/labs/lab06/lab06.ipynb
@@ -644,7 +644,8 @@
       "catalogue/page-48.html\n",
       "catalogue/page-49.html\n",
       "catalogue/page-50.html\n",
-      "Wall time: 2min 42s\n"
+      "CPU times: user 9.6 s, sys: 490 ms, total: 10.1 s\n",
+      "Wall time: 53.7 s\n"
      ]
     }
    ],
@@ -1052,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1062,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1175,7 @@
        "(20, 13)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1626,7 @@
        "40  163.01000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1656,7 @@
        "(54.29, 33.5)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1716,7 @@
        "(7, 6)"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1738,7 @@
        "'+54.29%'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1758,7 @@
        "'33.50B'"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1785,7 @@
        "33.500834782999995"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1860,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1876,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2211,7 @@
        "17 1970-01-01 00:00:01.541001629  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2252,7 +2253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
